--- a/vForum/View/Forum/GroupCellView.xib
+++ b/vForum/View/Forum/GroupCellView.xib
@@ -14,9 +14,9 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="166"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LUh-mn-Z6b">
+                <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LUh-mn-Z6b">
                     <rect key="frame" x="32" y="0.0" width="350" height="137"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="testgroup" translatesAutoresizingMaskIntoConstraints="NO" id="rsg-Ua-nnR">
                             <rect key="frame" x="0.0" y="0.0" width="350" height="137"/>
@@ -34,29 +34,34 @@
                         </visualEffectView>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XBJ-id-WE0">
                             <rect key="frame" x="0.0" y="0.0" width="350" height="137"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GROUP TITLE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrh-v4-iEd">
-                            <rect key="frame" x="112" y="48" width="124" height="24"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groupCellEffect" id="PfI-RL-WAF">
+                            <rect key="frame" x="220" y="0.0" width="498" height="137"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
+                        </imageView>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wAQ-Kr-0Xn">
+                            <rect key="frame" x="0.0" y="0.0" width="350" height="137"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Swift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrh-v4-iEd">
+                            <rect key="frame" x="112" y="45" width="50" height="24"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                             <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="16 minutes ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Qd-Hn-dPQ">
-                            <rect key="frame" x="112" y="76" width="98" height="19"/>
+                            <rect key="frame" x="112" y="71" width="98" height="19"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                             <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="testgroup" translatesAutoresizingMaskIntoConstraints="NO" id="Jrx-12-8d2">
-                            <rect key="frame" x="23" y="24" width="70" height="70"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groupCellEffect" id="PfI-RL-WAF">
-                            <rect key="frame" x="220" y="0.0" width="498" height="137"/>
+                            <rect key="frame" x="26" y="28" width="60" height="60"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
@@ -72,6 +77,7 @@
                 <outlet property="CellEffect" destination="PfI-RL-WAF" id="rGm-WJ-3fK"/>
                 <outlet property="CellView" destination="LUh-mn-Z6b" id="OuV-pS-oQm"/>
                 <outlet property="GroupLabel" destination="Vrh-v4-iEd" id="Dpd-wt-vwI"/>
+                <outlet property="SelectBackground" destination="wAQ-Kr-0Xn" id="fhH-G9-iGA"/>
                 <outlet property="TimeLabel" destination="4Qd-Hn-dPQ" id="3Gy-e5-wjD"/>
             </connections>
             <point key="canvasLocation" x="-195.6521739130435" y="177.45535714285714"/>
