--- a/vForum/Controller/Feed/Forum/PostDetailViewController.xib
+++ b/vForum/Controller/Feed/Forum/PostDetailViewController.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostDetailViewController" customModule="UiForum" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostDetailViewController" customModule="vForum" customModuleProvider="target">
             <connections>
                 <outlet property="addCmtOutlet" destination="ePF-3R-LK2" id="1te-Tj-bMl"/>
                 <outlet property="cmtBtnOutlet" destination="CyS-N7-MJd" id="iUR-j9-gPL"/>
@@ -43,7 +44,7 @@
                                     <color key="textColor" red="0.1529411765" green="0.36470588240000001" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imgEx" translatesAutoresizingMaskIntoConstraints="NO" id="SEN-Cz-EP6">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Not Liked" translatesAutoresizingMaskIntoConstraints="NO" id="SEN-Cz-EP6">
                                     <rect key="frame" x="20" y="20" width="30" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
@@ -60,10 +61,10 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8p-ur-2gS">
-                                    <rect key="frame" x="10" y="85" width="1893" height="52"/>
+                                    <rect key="frame" x="10" y="85" width="3075" height="52"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <string key="text">sdvsvfbgnrtj5yuk78k79lk67mojlaehjrgoasgapsofgnaiukfnvibe;eahiuhgwcfamijmafhey7dmyhtuijkodxsjvbneygihvjsknmvbuybsoulgwealmsh cuialjwknrmghvuaSIJDZKnvmwpeirasuh naejkrmbsvu 9pisdjmaesrfjh aeno;slfn aijkg b&lt;ZDBvieowhgransvkmZBVwiugawsnvaiwetbsdvqdfbdfbsdbsdbfrg4werdvew</string>
+                                    <string key="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</string>
                                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -108,7 +109,7 @@
         </view>
     </objects>
     <resources>
-        <image name="imgEx" width="560" height="350"/>
+        <image name="Not Liked" width="22" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
