--- a/vForum/View/Forum/PostDetail/PostCmtTableViewCell.xib
+++ b/vForum/View/Forum/PostDetail/PostCmtTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="113" id="KGk-i7-Jjw" customClass="PostCmtTableViewCell" customModule="UiForum" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="113" id="KGk-i7-Jjw" customClass="PostCmtTableViewCell" customModule="vForum" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="325" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -35,8 +36,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="cmtOutlet" destination="8P4-45-1KU" id="3tI-qI-GcR"/>
-                <outlet property="userOutlet" destination="PBH-XR-hwa" id="K9L-WY-osV"/>
+                <outlet property="cmtLbl" destination="8P4-45-1KU" id="3tI-qI-GcR"/>
+                <outlet property="userLbl" destination="PBH-XR-hwa" id="K9L-WY-osV"/>
             </connections>
             <point key="canvasLocation" x="-77.536231884057983" y="70.647321428571431"/>
         </tableViewCell>
