--- a/vForum/View/Forum/PostDetail/PostDetailViewController.xib
+++ b/vForum/View/Forum/PostDetail/PostDetailViewController.xib
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostDetailViewController" customModule="vForum" customModuleProvider="target">
             <connections>
-                <outlet property="addCmtOutlet" destination="ePF-3R-LK2" id="1te-Tj-bMl"/>
-                <outlet property="cmtBtnOutlet" destination="CyS-N7-MJd" id="iUR-j9-gPL"/>
-                <outlet property="descriptionOutlet" destination="h8p-ur-2gS" id="BLU-kg-8f5"/>
-                <outlet property="likeCountOutlet" destination="Ni2-3l-ZmG" id="48c-zb-1pC"/>
-                <outlet property="likeImgOutlet" destination="SEN-Cz-EP6" id="dRg-CY-g30"/>
-                <outlet property="listCmtOutlet" destination="U7B-kS-96L" id="Jop-Dq-MkK"/>
-                <outlet property="mainViewOutlet" destination="Vvf-Ve-WAl" id="8NE-B7-EbU"/>
+                <outlet property="addCmtTextField" destination="ePF-3R-LK2" id="GXP-t4-kR0"/>
+                <outlet property="cmtBtn" destination="CyS-N7-MJd" id="gCG-pa-U6H"/>
+                <outlet property="countLikeLbl" destination="Ni2-3l-ZmG" id="0Fq-Zw-MIV"/>
+                <outlet property="descriptionLbl" destination="h8p-ur-2gS" id="Hae-WR-HHg"/>
+                <outlet property="likeUImgView" destination="SEN-Cz-EP6" id="rQC-iz-o6Y"/>
+                <outlet property="mainView" destination="Vvf-Ve-WAl" id="I9x-yZ-gal"/>
                 <outlet property="scrollMainView" destination="0ng-5W-qns" id="lFE-UI-Vtr"/>
-                <outlet property="titlePostOutlet" destination="0Cd-nd-oJV" id="Y6y-xr-lk2"/>
-                <outlet property="userOutlet" destination="Phk-G4-2cy" id="Paz-pL-tVI"/>
+                <outlet property="tableView" destination="U7B-kS-96L" id="4Xh-ph-9HI"/>
+                <outlet property="titlePostLbl" destination="0Cd-nd-oJV" id="Q8x-am-Jly"/>
+                <outlet property="userLbl" destination="Phk-G4-2cy" id="dec-9j-1tl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="Qg6-cx-fDE"/>
             </connections>
         </placeholder>
@@ -50,7 +51,7 @@
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="U7B-kS-96L">
                                     <rect key="frame" x="10" y="145" width="378" height="200"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </tableView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Post" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Cd-nd-oJV">
                                     <rect key="frame" x="85" y="20" width="303" height="30"/>
@@ -89,7 +90,7 @@
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CyS-N7-MJd">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CyS-N7-MJd">
                     <rect key="frame" x="10" y="689" width="394" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -100,14 +101,17 @@
                     </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="-755.07246376811599" y="114.50892857142857"/>
         </view>
     </objects>
     <resources>
         <image name="notlike" width="21.5" height="23"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
